@@ -41,8 +41,10 @@ reportbug (4.10~WIP) UNRELEASED; urgency=low
     - when retrieving a string, also show a default text (if preset), useful in
       particular with --configure to see the current values for realname and
       email; thanks to Andrei Popescu for the report; Closes: #526631
+    - clarified the menu showing bugs already present, changing the title and
+      the buttons; thanks to Nick for the report; Closes: #462614
 
- -- Sandro Tosi <morph@debian.org>  Sun, 03 Jan 2010 16:28:52 +0100
+ -- Sandro Tosi <morph@debian.org>  Sun, 03 Jan 2010 20:10:03 +0100
 
 reportbug (4.9) unstable; urgency=low
 
